# SDC_2019

./: .gitignore  README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/hw3_0751904/: hw3_node
catkin_ws/devel/lib/hw4_0751904/: plot_path
catkin_ws/devel/lib/pkgconfig/: hw3_0751904.pc  hw4_0751904.pc  robot_pose_ekf.pc
catkin_ws/devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
catkin_ws/devel/share/hw3_0751904/cmake/: hw3_0751904Config.cmake
catkin_ws/devel/share/hw4_0751904/cmake/: hw4_0751904Config.cmake
catkin_ws/devel/share/robot_pose_ekf/cmake/: robot_pose_ekfConfig.cmake
catkin_ws/devel/share/roseus/ros/robot_pose_ekf/: manifest.l
catkin_ws/src/final_localization/: CMakeLists.txt  package.xml  path_bag1.csv  path_bag2.csv
catkin_ws/src/final_localization/config/: config.yaml  config_1.yaml  config_2.yaml  localization.rviz
catkin_ws/src/final_localization/include/: csvfile.h  one_d_kf.h
catkin_ws/src/final_localization/launch/: localization.launch  play_bag.launch
catkin_ws/src/final_localization/localization_ground_truth/: localization_ground_truth.py
catkin_ws/src/final_localization/src/: localization.cpp  plot_gt.py
catkin_ws/src/hw3_0751904/: CMakeLists.txt
catkin_ws/src/hw3_0751904/src/: hw3.cpp
catkin_ws/src/hw4_0751904/: CMakeLists.txt  package.xml  readme.md
catkin_ws/src/hw4_0751904/launch/: hw4.launch
catkin_ws/src/hw4_0751904/src/: hw4_0751904.cpp
catkin_ws/src/hw5_0751904/: CMakeLists.txt  README.md  link.txt  package.xml
catkin_ws/src/hw5_0751904/config/: rviz.rviz
catkin_ws/src/hw5_0751904/launch/: hw5.launch
catkin_ws/src/hw5_0751904/src/: hw5_node.cpp
catkin_ws/src/hw6_0751904/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hw6_0751904/include/: icp_slam.h
catkin_ws/src/hw6_0751904/launch/: hw6.launch  icp_slam.launch
catkin_ws/src/hw6_0751904/src/: hw6_node.cpp  icp_slam.cpp  icp_slam_main.cpp  save_pcd.cpp
catkin_ws/src/hw7_0751904/hw7_0751904/: CMakeLists.txt  package.xml
catkin_ws/src/hw7_0751904/hw7_0751904/src/: hw7_class.hpp  hw7_node.cpp
catkin_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
catkin_ws/src/robot_pose_ekf/include/robot_pose_ekf/: odom_estimation_node.h
catkin_ws/src/robot_pose_ekf/src/: odom_estimation_node.cpp
catkin_ws/src/tracking/: CMakeLists.txt  package.xml
catkin_ws/src/tracking/config/: rviz.rviz
catkin_ws/src/tracking/include/: track.h  track_ios.h
catkin_ws/src/tracking/launch/: track_ios.launch  tracking.launch
catkin_ws/src/tracking/src/: main.cpp  main_ios.cpp  track.cpp  track.h  track_ios.cpp
hw2/: sdc_hw.ipynb
hw2/tex/: Makefile  hw2.tex
hw4/data/: default.txt  imu_orientation_17e-8.txt  vo_orientation_0.00001.txt  vo_orientation_0.0017.txt  vo_orientation_10000.txt  vo_orientation_17.txt  vo_orientation_99999.txt  vo_position_0.0001.txt  vo_position_10.txt  zed_odom.txt
hw4/report/: report.tex
test/: CMakeLists.txt
test/include/: xyz_viewer.cpp  xyzrgb_viewer.cpp
test/src/: normal_distributions_transform.cpp  pcd_viewer.cpp  test.cpp  test_fs.cpp
test/src/scan/: scan_0.pcd  scan_1.pcd  scan_10.pcd  scan_11.pcd  scan_12.pcd  scan_13.pcd  scan_14.pcd  scan_15.pcd  scan_16.pcd  scan_17.pcd  scan_18.pcd  scan_19.pcd  scan_2.pcd  scan_20.pcd  scan_21.pcd  scan_22.pcd  scan_23.pcd  scan_24.pcd  scan_25.pcd  scan_26.pcd  scan_27.pcd  scan_28.pcd  scan_29.pcd  scan_3.pcd  scan_30.pcd  scan_31.pcd  scan_32.pcd  scan_33.pcd  scan_34.pcd  scan_35.pcd  scan_36.pcd  scan_37.pcd  scan_38.pcd  scan_39.pcd  scan_4.pcd  scan_40.pcd  scan_41.pcd  scan_42.pcd  scan_43.pcd  scan_44.pcd  (+8 more)
